-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.1
-
None
-
MacBook Pro, macOS Catalina 10.15.3
-
-
22d708697f62d2fbd69b57fd8bc3423af76d27ca (qt/qtdeclarative/5.15)
When setting Accessible.ignored: true on the root ApplicationWindow, qml occasionally crashes on macOS with a segfault. Removing the line solves the problem.
To reproduce:
crash.qml:
import QtQuick 2.9 import QtQuick.Controls 2.2 ApplicationWindow { visible: true Accessible.ignored: true }
Start and exit app a few times (about 10 should be enough):
$ qmlscene crash.qml $ qmlscene crash.qml $ qmlscene crash.qml $ qmlscene crash.qml $ qmlscene crash.qml $ qmlscene crash.qml $ qmlscene crash.qml ... zsh: segmentation fault qmlscene crash.qml
See attached crash report.
For Gerrit Dashboard: QTBUG-83738 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
298534,7 | Gracefully handle Accessible attached property on non-items | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |