Gracefully handle Accessible attached property on non-items

Attaching to e.g. a ApplicationWindow will result in corrupting the
window's private data and subsequent crashes.

Fixes: QTBUG-83738
Change-Id: Ia708edf29a0356a858ac27ff70125fc38932ba78
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>